REGRESSION(287869@main?): [macOS Debug wk2] ASSERTION FAILED: frame->presentationTime() >= m_lastMuxedSampleStartTime in WebCore::MediaRecorderPrivateEncoder::interleaveAndEnqueueNextFrame() https://bugs.webkit.org/show_bug.cgi?id=284853 rdar://141646476

Reviewed by Youenn Fablet.

This is a tentative fix involving four parts:
- We remove the assertion as it was mostly in place for development purposes; instead we log the errors.
  The assertion would normally occur if the incoming data was going to cause an invalid webm (non monotonically increasing timestamps).
- Add assertion that the compressed frames timestamp are increasing monotonically as it's one explanation that
  would trigger the earlier assertion with http/wpt/mediarecorder/MediaRecorder-video-bitrate.html
- Calculate the incoming video frame time at the time it is received to reduce the likelihood of frames
  having the same timestamp.
- Drop incoming video frames as soon as the pause() has been called as it could have caused
  an invalid calculation of the video frame time due to inconsistency between m_currentVideoDuration and m_resumeWallTime

Covered by existing tests, re-enable tests skipped in 287971@main.

* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/platform/mediarecorder/MediaRecorderPrivateEncoder.cpp:
(WebCore::MediaRecorderPrivateEncoder::pause):
(WebCore::MediaRecorderPrivateEncoder::resume):
(WebCore::MediaRecorderPrivateEncoder::appendVideoFrame):
(WebCore::MediaRecorderPrivateEncoder::enqueueCompressedVideoFrame):
(WebCore::MediaRecorderPrivateEncoder::interleaveAndEnqueueNextFrame):
(WebCore::MediaRecorderPrivateEncoder::currentTime const):
(WebCore::MediaRecorderPrivateEncoder::currentEndTime const):
(WebCore::MediaRecorderPrivateEncoder::nextVideoFrameTime): Deleted. Perform the calculation in appendVideoFrame instead.
* Source/WebCore/platform/mediarecorder/MediaRecorderPrivateEncoder.h:

Canonical link: https://commits.webkit.org/288583@main