Source/WebCore/platform/mediarecorder/MediaRecorderPrivateEncoder.cpp
@@ -208,17 +208,19 @@ void MediaRecorderPrivateEncoder::generateMIMEType()
 void MediaRecorderPrivateEncoder::pause()
 {
     assertIsMainThread();
+
     queueSingleton().dispatch([weakThis = ThreadSafeWeakPtr { *this }, this] {
         assertIsCurrent(queueSingleton());
         if (RefPtr protectedThis = weakThis.get()) {
-            m_isPaused = true;
             // We can't wait for the pending audio frame anymore, continue with what's available, we will drain the audio decoder instead.
             if (m_pendingAudioFramePromise)
                 m_pendingAudioFramePromise->second.reject();
             m_pendingAudioFramePromise.reset();
-            m_currentVideoDuration = currentEndTime();
 
-            LOG(MediaStream, "MediaRecorderPrivateEncoder::pause m_currentVideoDuration:%f", m_currentVideoDuration.toDouble());
+            m_isPaused = true;
+            m_previousSegmentVideoDurationUs = currentEndTime().toMicroseconds();
+
+            LOG(MediaStream, "MediaRecorderPrivateEncoder::pause m_currentVideoDuration:%f", m_previousSegmentVideoDurationUs / 1000000.0);
         }
     });
 }
@@ -230,12 +232,10 @@ void MediaRecorderPrivateEncoder::resume()
     queueSingleton().dispatch([weakThis = ThreadSafeWeakPtr { *this }, this] {
         assertIsCurrent(queueSingleton());
         if (RefPtr protectedThis = weakThis.get()) {
+            m_currentVideoSegmentStartTime.reset();
             m_isPaused = false;
-            m_firstVideoFrameTime.reset();
-            if (!hasAudio())
-                m_resumeWallTime = MonotonicTime::now();
             m_needKeyFrame = true;
-            LOG(MediaStream, "MediaRecorderPrivateEncoder:resume at:%f", m_currentVideoDuration.toDouble());
+            LOG(MediaStream, "MediaRecorderPrivateEncoder:resume at:%f", m_previousSegmentVideoDurationUs / 1000000.0);
         }
     });
 }
@@ -414,17 +414,23 @@ void MediaRecorderPrivateEncoder::appendVideoFrame(VideoFrame& frame)
     if (m_isStopped)
         return;
 
-    queueSingleton().dispatch([weakThis = ThreadSafeWeakPtr { *this }, this, frame = Ref { frame }, time = MediaTime(m_lastEnqueuedAudioTimeUs.load(), 1000000)]() mutable {
+    queueSingleton().dispatch([weakThis = ThreadSafeWeakPtr { *this }, this, frame = Ref { frame }, audioTime = lastEnqueuedAudioTime(), now = MonotonicTime::now()] mutable {
         assertIsCurrent(queueSingleton());
         if (RefPtr protectedThis = weakThis.get()) {
-            if (!hasAudio() && !m_resumeWallTime)
-                m_resumeWallTime = MonotonicTime::now();
-            appendVideoFrame(time, WTFMove(frame));
+            if (m_isPaused)
+                return;
+            auto nextVideoFrameTime = hasAudio() ? audioTime : MediaTime::createWithSeconds((now - m_currentVideoSegmentStartTime.value_or(now)) + Seconds::fromMicroseconds(m_previousSegmentVideoDurationUs));
+            if (!m_currentVideoSegmentStartTime) {
+                m_currentVideoSegmentStartTime = now;
+                // We take the time before m_previousSegmentVideoDurationUs is set so that the first frame will always appear to have a timestamp of 0 but with a longer duration.
+                nextVideoFrameTime = MediaTime(m_previousSegmentVideoDurationUs, 1000000);
+            }
+            appendVideoFrame(nextVideoFrameTime, WTFMove(frame));
         }
     });
 }
 
-void MediaRecorderPrivateEncoder::appendVideoFrame(const MediaTime& audioTime, Ref<VideoFrame>&& frame)
+void MediaRecorderPrivateEncoder::appendVideoFrame(MediaTime sampleTime, Ref<VideoFrame>&& frame)
 {
     assertIsCurrent(queueSingleton());
 
@@ -463,7 +469,6 @@ void MediaRecorderPrivateEncoder::appendVideoFrame(const MediaTime& audioTime, R
         })->chainTo(WTFMove(producer));
     }
 
-    auto sampleTime = nextVideoFrameTime(audioTime);
     // FIXME: AVAssetWriter errors when we attempt to add a sample with the same time.
     // When we start and audio isn't ready, we may output multiple frame that has a timestamp of 0.
     if (sampleTime <= m_lastEnqueuedRawVideoFrame)
@@ -476,18 +481,6 @@ void MediaRecorderPrivateEncoder::appendVideoFrame(const MediaTime& audioTime, R
     LOG(MediaStream, "appendVideoFrame:enqueuing raw video frame:%f queue:%zu first:%f last:%f (received audio:%d)", sampleTime.toDouble(), m_pendingVideoFrames.size(), m_pendingVideoFrames.first().second.toDouble(), m_pendingVideoFrames.last().second.toDouble(), !!m_lastEnqueuedAudioTimeUs.load());
 
     encodePendingVideoFrames();
-}
-
-MediaTime MediaRecorderPrivateEncoder::nextVideoFrameTime(const MediaTime& audioTime)
-{
-    assertIsCurrent(queueSingleton());
-
-    // We take the time before m_firstVideoFrameAudioTime is set so that the first frame will always apepar to have a timestamp of 0 but with a longer duration.
-    if (!m_firstVideoFrameTime) {
-        m_firstVideoFrameTime = m_currentVideoDuration;
-        return *m_firstVideoFrameTime;
-    }
-    return hasAudio() ? audioTime : currentTime();
 }
 
 void MediaRecorderPrivateEncoder::appendData(std::span<const uint8_t> data)
@@ -678,13 +671,16 @@ void MediaRecorderPrivateEncoder::enqueueCompressedVideoFrame(VideoEncoder::Enco
         return;
     }
 
+    MediaTime compressedFrameTime { frame.timestamp, 1000000 };
+
     ASSERT(m_videoTrackInfo);
-    m_lastReceivedCompressedVideoFrame = MediaTime(frame.timestamp, 1000000);
+    ASSERT(m_lastReceivedCompressedVideoFrame < compressedFrameTime, "compressed video timestamp must be strictly monotonically increasing");
+    m_lastReceivedCompressedVideoFrame = compressedFrameTime;
     ASSERT(m_lastReceivedCompressedVideoFrame <= m_lastEnqueuedRawVideoFrame);
 
     MediaSamplesBlock::SamplesVector vector(1, {
-        .presentationTime = m_lastReceivedCompressedVideoFrame,
-        .decodeTime = m_lastReceivedCompressedVideoFrame,
+        .presentationTime = compressedFrameTime,
+        .decodeTime = compressedFrameTime,
         .data = SharedBuffer::create(frame.data),
         .flags = frame.isKeyFrame ? MediaSample::SampleFlags::IsSync : MediaSample::SampleFlags::None
     });
@@ -832,9 +828,12 @@ void MediaRecorderPrivateEncoder::interleaveAndEnqueueNextFrame()
 
     ASSERT(!takeVideo || !m_nextVideoFrameMuxedShouldBeKeyframe || frame->isSync());
 
-    LOG(MediaStream, "interleaveAndEnqueueNextFrame: added %s (kf:%d) frame time:%f-%f (previous:%f) size:%zu", takeVideo ? "video" : "audio", frame->isSync(), frame->presentationTime().toDouble(), frame->presentationEndTime().toDouble(), m_lastMuxedSampleStartTime.toDouble(), m_interleavedFrames.size());
-    ASSERT(frame->presentationTime() >= m_lastMuxedSampleStartTime);
+    if (frame->presentationTime() < m_lastMuxedSampleStartTime)
+        RELEASE_LOG_ERROR(MediaStream, "interleaveAndEnqueueNextFrame: added %s (kf:%d) frame time:%f-%f (previous:%f type:%s) size:%zu with error", takeVideo ? "video" : "audio", frame->isSync(), frame->presentationTime().toDouble(), frame->presentationEndTime().toDouble(), m_lastMuxedSampleStartTime.toDouble(), m_lastMuxedSampleIsVideo ? "video" : "audio" , m_interleavedFrames.size());
+    else
+        LOG(MediaStream, "interleaveAndEnqueueNextFrame: added %s (kf:%d) frame time:%f-%f (previous:%f type:%s) size:%zu", takeVideo ? "video" : "audio", frame->isSync(), frame->presentationTime().toDouble(), frame->presentationEndTime().toDouble(), m_lastMuxedSampleStartTime.toDouble(), m_lastMuxedSampleIsVideo ? "video" : "audio" , m_interleavedFrames.size());
     m_lastMuxedSampleStartTime = frame->presentationTime();
+    m_lastMuxedSampleIsVideo = takeVideo;
     if (takeVideo) {
         m_hasMuxedVideoFrameSinceEndSegment = true;
         m_nextVideoFrameMuxedShouldBeKeyframe = false;
@@ -983,17 +982,19 @@ MediaTime MediaRecorderPrivateEncoder::currentTime() const
     if (hasAudio())
         return lastEnqueuedAudioTime();
 
-    return MediaTime::createWithSeconds(MonotonicTime::now() - m_resumeWallTime.value_or(MonotonicTime::now())) + m_currentVideoDuration;
+    auto currentDuration = MediaTime::createWithSeconds(Seconds::fromMicroseconds(m_previousSegmentVideoDurationUs));
+
+    if (!m_currentVideoSegmentStartTime)
+        return currentDuration;
+    return MediaTime::createWithSeconds(MonotonicTime::now() - *m_currentVideoSegmentStartTime) + currentDuration;
 }
 
 MediaTime MediaRecorderPrivateEncoder::currentEndTime() const
 {
-    assertIsCurrent(queueSingleton());
-
     if (hasAudio())
         return MediaTime(m_currentAudioTimeUs.load(), 1000000);
 
-    return MediaTime::createWithSeconds(MonotonicTime::now() - m_resumeWallTime.value_or(MonotonicTime::now())) + m_currentVideoDuration;
+    return currentTime();
 }
 
 RefPtr<AudioSampleBufferConverter> MediaRecorderPrivateEncoder::audioConverter() const
